# IntelligentTradingStrategies

./: .dockerignore  .gitignore  README.md  asgi.py  docker-compose.yml  pyproject.toml  repo_info.sh
doc/c4/1_system_context_diagram/: 1_context.puml
doc/c4/2_container_diagram/: 2_container.puml
docs/: 01-product-overview.md  02-installation-and-launch.md  03-system-architecture.md  04-data-hub.md  05-strategy-lab.md  06-ga-lab.md  07-model-development-guide.md  08-testing-methodology.md  09-api-reference.md  10-operations-and-delivery.md  11-scientific-basis.md  12-glossary.md  README.md  index.html  viewer.css  viewer.js
docs/en/: 01-product-overview.md  02-installation-and-launch.md  03-system-architecture.md  04-data-hub.md  05-strategy-lab.md  06-ga-lab.md  07-model-development-guide.md  08-testing-methodology.md  09-api-reference.md  10-operations-and-delivery.md  11-scientific-basis.md  12-glossary.md  README.md
docs/presentation/src/: README.md  index.html
infra/nginx/: Dockerfile  nginx.conf
its/: app.py  config.py  container.py
its/adapters/: cust_bar_conv.py
its/api/: custom_bars.py
its/data_loader/adapters/: __init__.py  history_adapter.py  share_info_adapter.py
its/data_loader/common/: models.py
its/data_loader/rest_api/: __init__.py  history.py  share_info.py
its/data_loader/t_invest_data_readers/: dividents_reader.py  prices_reader.py  stock_info.py  utils.py
its/data_loader/use_cases/: __init__.py  history.py  share_info.py
its/ga/: __init__.py  engine.py  factories.py  ga_draft.py  materialization.py  registry.py  task.md  types.py
its/ga/alphabets/: __init__.py
its/services/: __init__.py
its/services/ga_backend/: Dockerfile  __init__.py
its/strategies/: __init__.py
its/strategies/core/: __init__.py  dataframe_selector_mixin.py
its/strategies/models/: __init__.py  ga_generated_20260429213858_c37a6b6d_top_1.py  ga_generated_20260429213858_c37a6b6d_top_2.py  ga_generated_20260429213858_c37a6b6d_top_3.py  ga_generated_20260429230120_9b7c1038_top_1.py  ga_generated_20260429230120_9b7c1038_top_2.py  ga_generated_20260429230120_9b7c1038_top_3.py  ga_generated_20260429230432_6435459c_top_1.py  ga_generated_20260429230432_6435459c_top_2.py  ga_generated_20260429230432_6435459c_top_3.py  top_turnover_eq.py  (+28 more)
scripts/: build_docs_pdf.py
services/data_backend/: Dockerfile
services/strategy_backend/: Dockerfile
src/common/: models.py  utils.py
src/data_loader/: config.py
tests/ga/: test_engine.py  test_runtime_args.py
ui/data-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ui/launchpad-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
ui/strategy-ui/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
(+113 files in other folders)
