[tool.poetry]
name = "intelligenttradingstrategies"
version = "0.1.0"
description = ""
authors = ["Beilak <beylak@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.14.0"
ruff = "^0.1.3"
black = "^23.10.1"
aiohttp = "^3.8.6"
isort = "^5.12.0"
tinkoff-investments = "^0.2.0b62"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
